--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "controller",
   "version": "0.0.1",
-  "description": "Controller Manafesto",
+  "description": "Controller Manafesto Rev01",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
